textOverflow solved

--- a/src/components/topbar/style.less
+++ b/src/components/topbar/style.less
@@ -231,6 +231,12 @@
         visibility: visible;
         opacity: 1;
     }
+    .overflowText {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 90px;
+    }
 }
 
 
